Improved the Documentation of IError Interface and its subclasses

--- a/JMMTaskApi/Properties/launchSettings.json
+++ b/JMMTaskApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "v1/api/suppliers",
+      "launchUrl": "v1/api/customers",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
